# eigsep-motor-control

./: README.md  main.py  motor.py  serial_test.py  setup.cfg  test.py  test_alt.py  test_az.py
.github/workflows/: push.yml
eigsep_motor_control/: __init__.py  config.yaml  encoder.py  limit_switch_hit.py  motor.py  pid_controller.py  potentiometer.py  serial_params.py
l298/: motor.py
scripts/: calibrate_pot.py  main.py  read_pot.py  run.py  serial_test.py  smc.py  stop.py  test.py
src/: __init__.py  encoder.py  main.py  motor.py
tests/: test_encoder.py
