[metadata]
name = eigsep_motor_control
version = 0.0.1
description = Software for controlling and monitoring EIGSEP DC motors.
long_description = file: README.md
author = EIGSEP Team
author_email = chbye@berkeley.edu
license = MIT
url = https://github.com/EIGSEP/eigsep-motor-control
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >= 3.8
packages = find:
install_requires =
    numpy
    pyserial
    sparkfun-qwiic-dual-encoder-reader
    sparkfun-qwiic-scmd
    dual-max14870-rpi @ git+https://github.com/pololu/dual-max14870-motor-driver-rpi.git#egg=dual-max14870-rpi

[options.extras_require]
dev =
    black
    flake8
    pytest
    pytest-cov


[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
